--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,16 @@
 
     <uses-feature android:name="android.hardware.type.watch"/>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:theme="@android:style/Theme.DeviceDefault">
+            android:theme="@android:style/Theme.DeviceDefault"
+            android:networkSecurityConfig="@xml/network_security_config">
         <uses-library
                 android:name="com.google.android.wearable"
                 android:required="true"/>
@@ -23,6 +27,8 @@
         <meta-data
                 android:name="com.google.android.wearable.standalone"
                 android:value="true"/>
+        <!-- kakao map -->
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="4344cdf17bf7ab723bfbc0fcba9a4f38"/>
 
         <activity
                 android:name=".MainActivity"
