--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <uses-feature android:name="android.hardware.type.watch"/>
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
             android:allowBackup="true"
@@ -15,6 +15,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@android:style/Theme.DeviceDefault"
+            android:usesCleartextTraffic="true"
             android:networkSecurityConfig="@xml/network_security_config">
         <uses-library
                 android:name="com.google.android.wearable"
