--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 07 21:41:06 KST 2022
-sdk.dir=C\:\\DevTool\\Android\\Sdk
+#Thu Sep 08 19:49:01 KST 2022
+sdk.dir=C\:\\devtools\\android\\sdk
