위치 권한 요청 추가

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 08 19:49:01 KST 2022
-sdk.dir=C\:\\devtools\\android\\sdk
+#Sat Sep 10 13:32:13 KST 2022
+sdk.dir=C\:\\DevTool\\Android\\Sdk
